<resources>
    <string name="app_name">QuakeNWeather</string>

    <string name="title_activity_main">Quakes</string>
    <string name="title_activity_map">View Quakes</string>
    <string name="title_activity_statistics">Quake Statistics</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_details">Quake Details</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_weather_details">Weather Details</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="email_address">89753.gosalia@students.itu.edu</string>

    <string name="preference_magnitude_label">Default Magnitude Filter</string>
    <string name="preference_magnitude_label_1.0">1.0+</string>
    <string name="preference_magnitude_label_2.0">2.0+</string>
    <string name="preference_magnitude_label_3.0">3.0+</string>
    <string name="preference_magnitude_label_4.0">4.0+</string>
    <string name="preference_magnitude_label_4.5">4.5+</string>
    <string name="preference_magnitude_label_5.0">5.0+</string>
    <string name="preference_magnitude_label_5.5">5.5+</string>
    <string name="preference_magnitude_label_6.0">6.0+</string>
    <string name="preference_magnitude_label_6.5">6.5+</string>
    <string name="preference_magnitude_label_7.0">7.0+</string>
    <string name="preference_magnitude_label_7.5">7.5+</string>
    <string name="preference_magnitude_key">magnitude</string>
    <string name="preference_magnitude_1.0">1.0</string>
    <string name="preference_magnitude_2.0">2.0</string>
    <string name="preference_magnitude_3.0">3.0</string>
    <string name="preference_magnitude_4.0">4.0</string>
    <string name="preference_magnitude_4.5">4.5</string>
    <string name="preference_magnitude_5.0">5.0</string>
    <string name="preference_magnitude_5.5">5.5</string>
    <string name="preference_magnitude_6.0">6.0</string>
    <string name="preference_magnitude_6.5">6.5</string>
    <string name="preference_magnitude_7.0">7.0</string>
    <string name="preference_magnitude_7.5">7.5</string>

    <string name="preference_duration_label">Default Date Filter</string>
    <string name="preference_duration_label_last_hour">Last Hour</string>
    <string name="preference_duration_label_today">Today</string>
    <string name="preference_duration_label_last_24_hr">Last 24 hr</string>
    <string name="preference_duration_label_this_week">This Week</string>
    <string name="preference_duration_key">duration</string>
    <string name="preference_duration_last_hour">lasthour</string>
    <string name="preference_duration_today">today</string>
    <string name="preference_duration_last_24_hr">last24hr</string>
    <string name="preference_duration_this_week">thisweek</string>

    <string name="preference_distance_label">Distance Units</string>
    <string name="preference_distance_label_miles">Miles</string>
    <string name="preference_distance_label_kilometers">Kilometers</string>
    <string name="preference_distance_key">distance</string>
    <string name="preference_distance_miles">miles</string>
    <string name="preference_distance_kilometers">kilometers</string>

    <string name="preference_device_information_key">device</string>
    <string name="preference_device_information_label">Device Information</string>
    <string name="preference_error_information_key">error</string>
    <string name="preference_error_information_label">Error Information</string>

    <string name="link">&lt;a href="HREF">View on USGS Website&lt;/a></string>
    <string name="name1">Andrii Stasenko (92409)</string>
    <string name="name2">Jigar Rajnikant Gosalia (89753)</string>
    <string name="name3">Pratik Ganapavarapu (91290)</string>
    <string name="course">SWE690 Capstone Project</string>
    <string name="trimester">Spring 2018</string>
    <string name="professor">Prof. Tushar Chandra</string>
    <string name="software_version">1.0</string>
    <string name="description">An Android application that displays Quake information using free data APIs from https://earthquake.usgs.gov/ and Weather information using free data APIs https://openweathermap.org/api</string>

    <string name="about_name">Name(alpha order):</string>
    <string name="about_student_id">Student Id:</string>
    <string name="about_course">Course:</string>
    <string name="about_professor">Professor:</string>
    <string name="about_trimester">Trimester:</string>
    <string name="about_version">Version:</string>
    <string name="about_description">Description:</string>
    <string name="about_install">Installed:</string>
    <string name="about_last_viewed">Last Viewed:</string>

    <string name="details_title">Title:</string>
    <string name="details_location">Location:</string>
    <string name="details_coordinates">Coordinates:</string>
    <string name="details_time">Time:</string>
    <string name="details_depth">Depth:</string>
    <string name="details_event_id">EventId:</string>
    <string name="details_significance">Significance:</string>
    <string name="details_review_status">Review Status:</string>
    <string name="details_more_details">More Details:</string>

    <string name="weather_button_text">Get 7 Days Weather</string>
    <string name="statistics_today">Quakes Today</string>
    <string name="statistics_this_week">This Week</string>
    <string name="statistics_this_month">This Month</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_weather">Weather</string>
    <string name="preference_temperature_celsius">Celsius</string>
    <string name="preference_temperature_fahrenheit">Fahrenheit</string>
    <string name="preference_temperature_key">temperature</string>
    <string name="temperature_units">Temperature Units</string>
    <string name="morning_temperature">Morning temperature:</string>
    <string name="day_temperature">Day temperature:</string>
    <string name="evening_temperature">Evening temperature:</string>
    <string name="night_temperature">Night temperature:</string>
    <string name="atmospheric_pressure">Atmospheric pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="weather_details">Weather Details</string>

</resources>