<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="main_screen">

    <PreferenceCategory
        android:key="quake_filters"
        android:title="QUAKE FILTERS" >
        <ListPreference
            android:title="@string/preference_magnitude_label"
            android:key="@string/preference_magnitude_key"
            android:defaultValue="@string/preference_magnitude_3.0"
            android:entryValues="@array/preference_magnitude_values"
            android:entries="@array/preference_magnitude_options" />
        <ListPreference
            android:title="@string/preference_duration_label"
            android:key="@string/preference_duration_key"
            android:defaultValue="@string/preference_duration_last_24_hr"
            android:entryValues="@array/preference_duration_values"
            android:entries="@array/preference_duration_options" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="data_customization"
        android:title="DATA CUSTOMIZATION" >
        <ListPreference
            android:title="@string/preference_distance_label"
            android:key="@string/preference_distance_key"
            android:defaultValue="@string/preference_distance_miles"
            android:entryValues="@array/preference_distance_values"
            android:entries="@array/preference_distance_options" />
    </PreferenceCategory>

</PreferenceScreen>