<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_details_outer_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/city_date_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather_date_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:textColor="#228B22"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/weather_details_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="15dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/picture_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weather_imageView"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/common_full_open_on_phone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/morningTemperature_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left"
        android:orientation="horizontal"
        android:textAlignment="gravity">

        <TextView
            android:id="@+id/morningTemperature_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/morning_temperature"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/morningTemperature_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dayTemperaturee_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/dayTemperature_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/day_temperature"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dayTemperature_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/eveningTemperature_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/eveningTemperature_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/evening_temperature"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/eveningTemperature_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nightTemperature_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/nightTemperature_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/night_temperature"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nightTemperature_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pressure_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/pressure_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/atmospheric_pressure"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/pressure_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/humidity_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/humidity_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/humidity"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/humidity_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/windSpeed_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/windSpeed_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/wind_speed"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/windSpeed_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
